Fix bug that caused content to jump to top when showing offcanvas menu

--- a/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
@@ -48,7 +48,6 @@
 
 	body.offcanvas-active-left,
 	body.offcanvas-animating-left {
-		height: 100%;
 		overflow: hidden;
 	}
 
